version bump and a couple of helpers